[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cxbind"
version = "0.3"
description = 'pybind11 binding generator'
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = []
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "clang ==15.0.7",
    "click ~=8.1.7",
    "Jinja2 ~=3.1.2",
    "loguru ~=0.7.2",
    "PyYAML ~=6.0.1",
    "pydantic ~=2.5.3",
]

#dynamic = ["version"]

[project.optional-dependencies]
dev = ["black ~=22.12.0"]
test = ["pytest ~=7.2.1"]

[project.urls]
homepage = "https://github.com/crunge/cxbind"
documentation = "https://crungelab.github.io/cxbind/"
repository = "https://github.com/crungelab/cxbind"
changelog = "https://github.com/crungelab/cxbind/blob/main/CHANGELOG.md"

[project.scripts]
cxbind = 'cxbind.cli:cli'

[tool.hatch.version]
path = "cxbind/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=deeper --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "furo",
  "sphinxcontrib-apidoc",
  "sphinxemoji"
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build docs docs/_build"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.hatch.build.targets.wheel]
packages = ["cxbind"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["cxbind/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ ~= .__main__.:", "if TYPE_CHECKING:"]
